--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "copy": "node copy.js"
   },
   "dependencies": {
+    "firebase": "2.4.2",
     "jquery": "^3.2.1",
+    "masonry-layout": "^4.2.0",
     "vue": "^2.4.4",
     "vue-router": "^2.7.0",
     "vuex": "^2.4.0"
